--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,20 @@ header {
     height: 120px;
 }
 
+.content{
+    text-align: center;
+}
 
+div h1,
+p {
+    color: black;
+}
+div p {
+    margin-left: 200px;
+    margin-right: 200px;
+    font-size: 18px;
+    padding-bottom: 100px;
+}
 /* Tăng kích thước font chữ cho header */
 
 header h1 {
@@ -57,7 +70,7 @@ li a,
 li a:hover:not(.active),
 .dropdown:hover .dropbtn {
     color: white;
-    background-color: #4CAF50;
+    background-color: #275255;
 }
 
 li.dropdown {
@@ -99,38 +112,3 @@ li.dropdown {
 .hideable-section:first-of-type {
     display: block;
 }
-
-/*Gallery*/
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-  }
-/* Create four equal columns that sits next to each other */
-.column {
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-  }
-  
-  .column img {
-    margin-top: 8px;
-    vertical-align: middle;
-  }
-
-  
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 800px) {
-    .column {
-      flex: 50%;
-      max-width: 50%;
-    }
-  }
-  
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column {
-      flex: 100%;
-      max-width: 100%;
-    }
-  }
